# aetheris

./: .gitignore  PHASE1_LAUNCH.md
aetheris-agent-alpha/: .env.priority3.example  docker-compose.priority3.yml
aetheris-agent-alpha-rust/: .env.example  Cargo.toml  README.md
aetheris-agent-alpha-rust/src/: alerts.rs  circuit_breaker.rs  config.rs  main.rs  volatility.rs  ws.rs
aetheris-agent-alpha-rust/src/arb/: detector.rs  mod.rs  routes.rs
aetheris-agent-alpha-rust/src/db/: mod.rs
aetheris-agent-alpha-rust/src/math/: aerodrome.rs  mod.rs  uniswap_v3.rs
aetheris-agent-alpha-rust/src/rpc/: mod.rs  multicall.rs  pool.rs
aetheris-agent-alpha-rust/src/tx/: mod.rs
aetheris-agent-alpha/agent-alpha/: agent.py  agent_phase1_backup.py  arbitrage_engine.py  daily_report.py  dashboard.py  dex_price_monitor.py  requirements.txt  test_priority4_agents.py
aetheris-agent-alpha/analyzer/: threat_engine.py
aetheris-agent-alpha/gnosis/: deploy_cold_safe.ts  generate_merkle_root.ts
aetheris-agent-alpha/monitor/: contract_monitor.py  flashbots_submitter.py
aetheris-agent-alpha/notifications/: notification_service.py
aetheris-agent-v/: .env.example  Cargo.toml  README.md
aetheris-agent-v/src/: config.rs  lib.rs  main.rs
aetheris-agent-v/src/alerts/: mod.rs
aetheris-agent-v/src/db/: mod.rs
aetheris-agent-v/src/detector/: mod.rs  threat.rs
aetheris-agent-v/src/monitor/: mod.rs  oracle.rs  ownership.rs  proxy.rs  state.rs  watchlist.rs
aetheris-agent-v/src/responder/: emergency.rs  mod.rs
aetheris-agent-v/src/rpc/: mod.rs  multicall.rs
aetheris-agent-v/tests/: test_db.rs  test_monitor_analysis.rs  test_multicall_utils.rs  test_slot_snapshot.rs  test_threat_classifier.rs  test_watchlist.rs
aetheris-backend/: .env.example  package-lock.json  package.json
aetheris-backend/src/: index.ts
aetheris-frontend/: package-lock.json  package.json  tailwind.config.js
aetheris-frontend/app/: globals.css
aetheris-frontend/components/: Footer.tsx  Header.tsx  Web3Provider.tsx
aetheris-frontend/hooks/: useAetherisUser.ts  useAgentAlpha.ts  useAgentV.ts  useDeposit.ts  useProfits.ts  useStaking.ts  useTransactions.ts
aetheris-frontend/lib/: api.ts  contracts.ts  wagmi.ts
aetheris-frontend/pages/: _app.tsx  account.tsx  agents.tsx  community.tsx  dashboard.tsx  earn.tsx  gasless-transactions.tsx  how-it-works.tsx  index.tsx  partners.tsx  problem.tsx  proof-of-exit.tsx  roadmap.tsx  security.tsx  stake.tsx  team.tsx  tokenomics.tsx  v-proofs.tsx  whitepaper.tsx
aetheris-protocol/: AetherisStaking_flat.sol  env.example  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
aetheris-protocol/contracts/: AetherisAccount.sol  AetherisAccountFactory.sol  AetherisGovernance.sol  AetherisPaymaster.sol  AetherisStaking.sol  AetherisTimelock.sol  (+8 more)
agent-beta/: agent_beta.py  deployments.json  probe_snx.py  probe_snx_mainnet.py  test_agent_beta.py
agent_gas/: .env.example  README.md  package-lock.json  package.json
(+76 files in other folders)
