[package]
name        = "aetheris-agent-alpha-rust"
version     = "0.1.0"
edition     = "2021"
description = "Aetheris Protocol — Agent Alpha Rust Bot (Base L2)"

[[bin]]
name = "aetheris-agent-alpha-rust"
path = "src/main.rs"

[dependencies]
# ── Ethereum / Alloy ─────────────────────────────────────────────────────────
alloy = { version = "0.9", features = ["full"] }

# ── Async runtime ────────────────────────────────────────────────────────────
tokio          = { version = "1",    features = ["full"] }
tokio-stream   = "0.1"
futures        = "0.3"

# ── Serialisation ────────────────────────────────────────────────────────────
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"

# ── SQLite ───────────────────────────────────────────────────────────────────
rusqlite       = { version = "0.32", features = ["bundled"] }

# ── Logging ──────────────────────────────────────────────────────────────────
tracing                 = "0.1"
tracing-subscriber      = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender        = "0.2"

# ── Config / CLI ─────────────────────────────────────────────────────────────
dotenvy        = "0.15"
clap           = { version = "4", features = ["derive", "env"] }

# ── HTTP (alerts) ────────────────────────────────────────────────────────────
reqwest        = { version = "0.12", features = ["json"] }

# ── Misc ─────────────────────────────────────────────────────────────────────
chrono         = { version = "0.4", features = ["serde"] }
anyhow         = "1"
thiserror      = "1"
hex            = "0.4"

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"

[profile.dev]
opt-level = 1   # faster incremental builds during dev
