# Aetheris\aetheris-agent-v\Cargo.toml

[package]
name = "aetheris-agent-v"
version = "0.1.0"
edition = "2021"
description = "Aetheris Protocol — Agent V: On-chain security monitor"

[lib]
name = "aetheris_agent_v"
path = "src/lib.rs"

[[bin]]
name = "aetheris-agent-v"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
ethers = { version = "2", features = ["ws", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
